[package]
name = "hy_tuner"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
crossterm = "0.29"
ratatui = { version = "0.30", default-features = false, features = [
    "crossterm",
] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
reqwest = { version = "0.12", default-features = false, features = [
    "blocking",
    "rustls-tls",
] }
lazy_static = "1"
regex = "1"
